# archgraph

./: CHANGELOG.md  CONTRIBUTING.md  README.md  mcp-config.json  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MCP_SETUP.md
docs/diagrams/: class_diagram.mmd  class_diagram.puml  dependency_graph.mmd  package_structure.mmd
examples/: README.md
examples/sample_project/: main.py  models.py  services.py  utils.py
src/archgraph/: __init__.py  cli.py  exporters.py  generators.py  llm_analyzer.py  mcp_server.py
src/pyarchviz/: __init__.py  analyzer.py  cli.py  generators.py
test_diagrams/: class_diagram.mmd  dependency_graph.mmd  package_structure.mmd
tests/: __init__.py  test_analyzer.py
