[project]
name = "pyarchviz"
version = "0.1.0"
description = "Python Architecture Visualizer - Generate software architecture diagrams from Python code"
readme = "README.md"
authors = [
    { name = "Torstein Sørnes", email = "t.soernes@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "rich>=14.2.0",
    "networkx>=3.5",
    "astroid>=4.0.2",
    "graphviz>=0.21",
    "pillow>=12.0.0",
]
keywords = ["architecture", "visualization", "diagrams", "uml", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
pyarchviz = "pyarchviz.cli:main"

[project.urls]
Homepage = "https://github.com/torsteinsornes/pyarchviz"
Repository = "https://github.com/torsteinsornes/pyarchviz"
Issues = "https://github.com/torsteinsornes/pyarchviz/issues"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]
