[project]
name = "archgraph"
version = "0.3.0"
description = "ArchGraph - Generate software architecture diagrams from Python code with GPT-5 AI-powered insights"
readme = "README.md"
authors = [
    { name = "Torstein Sørnes", email = "t.soernes@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "rich>=14.2.0",
    "networkx>=3.5",
    "astroid>=4.0.2",
    "graphviz>=0.21",
    "pillow>=12.0.0",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "fastmcp>=2.13.1",
]
keywords = ["architecture", "visualization", "diagrams", "uml", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
archgraph = "archgraph.cli:main"

[project.urls]
Homepage = "https://github.com/tsoernes/archgraph"
Repository = "https://github.com/tsoernes/archgraph"
Issues = "https://github.com/tsoernes/archgraph/issues"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]
